[gd_scene load_steps=4 format=3 uid="uid://bi0igh5n55x34"]

[ext_resource type="PackedScene" uid="uid://brs4thnodvu8e" path="res://objects/characters/character.tscn" id="1"]
[ext_resource type="Theme" uid="uid://b5t337112nd04" path="res://assets/materials/themes/interface_theme.tres" id="2"]
[ext_resource type="Script" path="res://assets/scripts/interface/CharacterMenu.gd" id="3"]

[node name="CharacterMenu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)
script = ExtResource("3")

[node name="back" type="Button" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -196.0
offset_right = 320.0
offset_bottom = -172.0
theme = ExtResource("2")
text = "Назад"

[node name="save" type="Button" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -156.0
offset_right = 320.0
offset_bottom = -132.0
theme = ExtResource("2")
text = "Сохранить"

[node name="random" type="Button" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -116.0
offset_right = 320.0
offset_bottom = -92.0
theme = ExtResource("2")
text = "Рандом"

[node name="partsLabel" type="Label" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 384.0
offset_top = -164.0
offset_right = 576.0
offset_bottom = -140.0
theme = ExtResource("2")
text = "Части"

[node name="mainColorLabel" type="Label" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -60.0
offset_right = 320.0
offset_bottom = -36.0
theme = ExtResource("2")
text = "Цвет шкуры"

[node name="mainColor" type="ColorPickerButton" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -20.0
offset_right = 320.0
offset_bottom = 12.0
theme = ExtResource("2")
edit_alpha = false

[node name="eyesColorLabel" type="Label" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = 28.0
offset_right = 320.0
offset_bottom = 52.0
theme = ExtResource("2")
text = "Цвет глаз"

[node name="eyesColor" type="ColorPickerButton" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = 68.0
offset_right = 320.0
offset_bottom = 100.0
theme = ExtResource("2")
edit_alpha = false

[node name="nameLabel" type="Label" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = 140.0
offset_right = 320.0
offset_bottom = 164.0
pivot_offset = Vector2(96, 16)
theme = ExtResource("2")
text = "Имя"

[node name="name" type="LineEdit" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = 180.0
offset_right = 320.0
offset_bottom = 212.0
theme = ExtResource("2")

[node name="parts" type="OptionButton" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 384.0
offset_top = -124.0
offset_right = 576.0
offset_bottom = -100.0
theme = ExtResource("2")

[node name="genderLabel" type="Label" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 384.0
offset_top = 140.0
offset_right = 576.0
offset_bottom = 164.0
pivot_offset = Vector2(96, 16)
theme = ExtResource("2")
text = "Пол персонажа"

[node name="gender" type="OptionButton" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 384.0
offset_top = 188.0
offset_right = 576.0
offset_bottom = 212.0
theme = ExtResource("2")
item_count = 2
popup/item_0/text = "Женский"
popup/item_0/id = 0
popup/item_1/text = "Мужской"
popup/item_1/id = 1

[node name="parts_more" type="Control" parent="."]
visible = false
anchors_preset = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 384.0
offset_top = -84.0
offset_right = 576.0
offset_bottom = 92.0

[node name="partsLabel2" type="Label" parent="parts_more"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -64.0
offset_right = 192.0
offset_bottom = -40.0
theme = ExtResource("2")
text = "Тип"

[node name="partsLabel3" type="Label" parent="parts_more"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 24.0
offset_right = 192.0
offset_bottom = 48.0
theme = ExtResource("2")
text = "Цвет"

[node name="part_id" type="SpinBox" parent="parts_more"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -24.0
offset_right = 192.0
offset_bottom = 8.0
theme = ExtResource("2")

[node name="part_color" type="ColorPickerButton" parent="parts_more"]
layout_mode = 0
offset_top = 152.0
offset_right = 192.0
offset_bottom = 184.0
theme = ExtResource("2")
edit_alpha = false

[node name="characterBack" type="Control" parent="."]
anchors_preset = 0
anchor_left = 1.0
anchor_top = 0.48
anchor_right = 1.0
anchor_bottom = 0.48
offset_left = -448.0
offset_top = -224.0
offset_bottom = 224.0

[node name="character" parent="characterBack" instance=ExtResource("1")]
position = Vector2(192, 288)
scale = Vector2(-4, 4)

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="random" to="." method="_on_random_pressed"]
[connection signal="color_changed" from="mainColor" to="." method="_on_mainColor_color_changed"]
[connection signal="color_changed" from="eyesColor" to="." method="_on_eyesColor_color_changed"]
[connection signal="item_selected" from="parts" to="." method="_on_parts_item_selected"]
[connection signal="item_selected" from="gender" to="." method="_on_gender_item_selected"]
[connection signal="value_changed" from="parts_more/part_id" to="." method="_on_part_id_value_changed"]
[connection signal="color_changed" from="parts_more/part_color" to="." method="_on_part_color_color_changed"]
